# routes/course.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const router = express.Router();
 const courseController = require("../controllers/courseController");
+const { ensureAuthenticated } = require("../middleware/sessionAuth");
 //const authenticateJWT = require('../middlewares/jwtAuth');
 
 // GET routes
@@ -11,8 +12,9 @@ router.get(
     courseController.getCourses
 );
 
+// GET single course by courseId
 router.get(
-    "/:courseId",
+    "/:id",
     /*  #swagger.tags = ["Courses"]
      */
     courseController.getCourseById
@@ -23,22 +25,25 @@ router.post(
     "/",
     /*  #swagger.tags = ["Courses"]
      */
+    ensureAuthenticated,
     courseController.createCourse
 );
 
 // Put route
 router.put(
-    "/:courseId",
+    "/:id",
     /*  #swagger.tags = ["Courses"]
      */
+    ensureAuthenticated,
     courseController.updateCourse
 );
 
 // Delete route
 router.delete(
-    "/:courseId",
+    "/:id",
     /*  #swagger.tags = ["Courses"]
      */
+    ensureAuthenticated,
     courseController.deleteCourse
 );
 
